@@ -13,14 +13,15 @@ module StateMachine
     #   static state or a lambda block which will be evaluated at runtime
     #   (e.g. lambda {|vehicle| vehicle.speed == 0 ? :parked : :idling}).
     #   Default is nil.
-    # * <tt>:action</tt> - The action to invoke when an object transitions.
-    #   Default is nil unless otherwise specified by the configured integration.
+    # * <tt>:action</tt> - The instance method to invoke when an object
+    #   transitions. Default is nil unless otherwise specified by the
+    #   configured integration.
     # * <tt>:plural</tt> - The pluralized name of the attribute.  By default,
     #   this will attempt to call +pluralize+ on the attribute, otherwise
     #   an "s" is appended.  This is used for generating scopes.
     # * <tt>:namespace</tt> - The name to use for namespacing all generated
     #   instance methods (e.g. "heater" would generate :turn_on_heater and
-    #   :turn_off_header for the :turn_on/:turn_off events).  Default is nil.
+    #   :turn_off_heater for the :turn_on/:turn_off events).  Default is nil.
     # * <tt>:integration</tt> - The name of the integration to use for adding
     #   library-specific behavior to the machine.  Built-in integrations include
     #   :data_mapper, :active_record, and :sequel.  By default, this is
@@ -74,40 +75,58 @@ module StateMachine
     #     end
     #   end
     # 
-    # == Attribute accessor
+    # == Instance Methods
     # 
-    # The attribute for each machine stores the value for the current state
-    # of the machine.  In order to access this value and modify it during
-    # transitions, a reader/writer must be available.  The following methods
-    # will be automatically generated if they are not already defined
-    # (assuming the attribute is called +state+):
+    # The following instance methods will be automatically generated by the
+    # state machine.  Any existing methods will not be overwritten.
     # * <tt>state</tt> - Gets the current value for the attribute
     # * <tt>state=(value)</tt> - Sets the current value for the attribute
     # * <tt>state?(name)</tt> - Checks the given state name against the current
     #   state.  If the name is not a known state, then an ArgumentError is raised.
     # * <tt>state_name</tt> - Gets the name of the state for the current value
+    # * <tt>state_events</tt> - Gets the list of events that can be fired on
+    #   the current object's state
+    # * <tt>state_transitions(include_no_op = false)</tt> - Gets the
+    #   list of possible transitions that can be made on the current object's
+    #   state
     # 
-    # For example, the following machine definition will not generate the reader
-    # or writer methods since the class has already defined an attribute
-    # accessor:
-    # 
-    #   class Vehicle
-    #     attr_accessor :state
-    #     
-    #     state_machine do
-    #       ...
-    #     end
-    #   end
-    # 
-    # On the other hand, the following state machine will define *both* a
-    # reader and writer method, which is functionally equivalent to the
-    # example above:
+    # For example,
     # 
     #   class Vehicle
-    #     state_machine do
-    #       ...
+    #     state_machine :state, :initial => :parked do
+    #       event :ignite do
+    #         transition :parked => :idling
+    #       end
+    #       
+    #       event :park do
+    #         transition :idling => :parked
+    #       end
     #     end
     #   end
+    #   
+    #   vehicle = Vehicle.new
+    #   vehicle.state                     # => "parked"
+    #   vehicle.state_name                # => :parked
+    #   vehicle.state?(:parked)           # => true
+    #   
+    #   # Changing state
+    #   vehicle.state = 'idling'
+    #   vehicle.state                     # => "idling"
+    #   vehicle.state_name                # => :idling
+    #   vehicle.state?(:parked)           # => false
+    #   
+    #   # Getting current event / transition availability
+    #   vehicle.state_events              # => [:park]
+    #   vehicle.park                      # => true
+    #   vehicle.state_events              # => [:ignite]
+    #   
+    #   vehicle.state_transitions         # => [#<StateMachine::Transition attribute=:state event=:ignite from="parked" from_name=:parked to="idling" to_name=:idling>]
+    #   vehicle.ignite
+    #   vehicle.state_transitions         # => [#<StateMachine::Transition attribute=:state event=:park from="idling" from_name=:idling to="parked" to_name=:parked>]
+    #   
+    #   # Include a "no-op" transition for a loopback
+    #   vehicle.state_transitions(true)   # => [#<StateMachine::Transition attribute=:state event=nil from="idling" from_name=:idling to="idling" to_name=:idling>,
+    #                                           #<StateMachine::Transition attribute=:state event=:park from="idling" from_name=:idling to="parked" to_name=:parked>]
     # 
     # == Attribute initialization
     # 
